2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.cxx : compilation bug fix for the vtk part

2004-11-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx : fix bug... test if the fp is opened to use it
   * src/gdcmPixelConvert.cxx : calculate the image size when while the grab of
     the header.
   * src/gdcmFile.[h|cxx] : remove PixelRead and ImageDataSizeRaw variables and
     some corresponding methods. Write correctly the file and check before
     write
   * Test/TestCopyDicom.cxx, TestReadWriteReadCompare.cxx,
     TestAllReadCompareDicom.cxx : pass the write of images to RGB and test
     is now on RGB datas (as before my last commit
   * Example/PrintHeader.cxx, PrintFile.cxx : repad files.

2004-11-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmBinEntry.cxx, gdcmSeqEntry.cxx, gdcmSQItem.cxx, gdcmValEntry.cxx :
     Add a print information of the type of the entry
   * src/gdcmDocument.cxx : add the write of the preambule of a Dicom file.
     It was in the gdcmFile, and all write have been regrouped
   * src/gdcmFile.[h|cxx] : add methods to get the Raw data elements and size.
     Write correctly all dicom files (in decompressed mode only at this time)
   * Test/ : test on files are now made using Raw datas and not color datas if
     any.
   * Example/PrintFile.cxx : add more printings

2004-11-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Amelioration of code, remove some code copy. For the loading of
     BinEntry (in gdcmDocument), add the test to verify if the file is already
     opened or not.

2004-11-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntryArchive.[h|cxx] : bug fix and add a method to temporary
     remove a DocEntry in the header (push an empty DocEntry)
   * src/gdcmFile.[h|cxx] : remove some useless variables, methods and code
     lines. Bug fix in the initialization of the PixelConvert and the 